# hashicorp-vault-boilerplate

./: .gitignore  README.md  docker-compose.yml  main.tf  test_save_private_key.py  vault-deployment.yaml
k8/: vault-config.yaml  vault-service.yaml
vault_client/: Cargo.toml
vault_client/src/: main.rs
