[package]
name = "vault_client"
version = "0.1.0"
edition = "2021"

[dependencies]
vaultrs = { version = "0.7.1", default-features = false, features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
openssl = "0.10.64"
hyper-openssl = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
